<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Ericsson AB
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OpenCloseFragment">

    <eu.sofie_iot.smaug.mobile.ui.views.LockerView
        android:id="@+id/locker_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:name="Locker Name"
        app:text="Locker Owner\nOther information" />

    <eu.sofie_iot.smaug.mobile.ui.views.LockerStatusView
        android:id="@+id/locker_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locker_info"
        app:status="closed"
        app:statusTime="2020-01-01T12:00:00" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center|fill"
        android:lineSpacingExtra="12sp"
        android:minHeight="100dp"
        android:text="@string/open_help_open_close"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
        app:layout_constraintBottom_toTopOf="@+id/mode_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locker_status" />

<!--    <TextView-->
<!--        android:id="@+id/mode_label"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:text="Mode"-->
<!--        android:textAlignment="center"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
<!--        app:layout_constraintBottom_toTopOf="@id/model_controls"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/mode_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/mode_default"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/automatic_toggle"
            app:icon="@drawable/ic_baseline_autorenew_24" />

        <Button
            android:id="@+id/mode_open"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/open_only"
            app:icon="@drawable/ic_baseline_lock_open_24" />

        <Button
            android:id="@+id/mode_close"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/close_only"
            app:icon="@drawable/ic_baseline_lock_24" />

        <Button
            android:id="@+id/mode_query"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/check_only"
            app:icon="@drawable/ic_baseline_remove_red_eye_24" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>