<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Ericsson AB
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PaymentFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rental_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rent_for"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rental_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="7"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline2"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rental_header"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rental_length_units"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/primaryTextColor"
        android:text="hours"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        app:layout_constraintBottom_toBottomOf="@id/rental_length"
        app:layout_constraintStart_toEndOf="@+id/rental_length"
        app:layout_constraintTop_toTopOf="@+id/rental_length"
        tools:ignore="HardcodedText" />

    <com.kevalpatel2106.rulerpicker.RulerValuePicker
        android:id="@id/rental_length_selection"
        android:layout_width="0dp"
        android:layout_height="50dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rental_length"
        android:layout_marginTop="16dp"

        app:indicator_interval="14dp"
        app:indicator_width="1dp"
        app:min_value="1"
        app:max_value="96"
        app:ruler_text_size="0dp"

        app:indicator_color="@color/secondaryColor"
        android:background="@color/primaryLightColor"
        app:notch_color="@color/secondaryDarkColor"
        app:ruler_text_color="@color/primaryLightColor"
        />

<!--    <SeekBar-->
<!--        android:id="@+id/rental_length_selection"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/rental_length" />-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rental_until"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="until today 13:30"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rental_length_selection" />

    <eu.sofie_iot.smaug.mobile.ui.views.PriceView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rental_until" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:layout_marginBottom="24dp"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_payment"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:textColor="@color/primaryTextColor"
        app:iconTint="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_payment"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_payment"
        />
</androidx.constraintlayout.widget.ConstraintLayout>